# airesearcher

./: .gitignore  CLAUDE.md  cli.py  dashboard.py  decisions.md  index_with_delay.py  pyproject.toml  regen_html.py  reindex_all.py  run_demo.py  upload_server.py
ai_researcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
api/: corpus_data.py  deps.py  main.py  task_manager.py
api/routers/: discover.py  journals.py  plan.py  references.py  review.py  stats.py  submit.py  tasks.py  write.py
config/: journals.yaml  llm_routing.yaml  llm_routing_openrouter.yaml  proxy.yaml
config/citation_profiles/: comparative_literature.yaml
config/journal_profiles/: comparative_literature.yaml  comparative_literature_studies.yaml  (+6 more)
data/: emails_chercheur_associe.md  index.html  upload_server.py  us_affiliate_researcher_guide.md
dev_log/: 2026-02-14_session_01.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
prompts/: close_reading.md  gap_analysis.md  reference_blueprint.md  reference_curation.md  review.md
scripts/: refilter_sessions.py  seed_directions.py
src/: orchestrator.py  scheduler.py
tests/: test_citation_manager.py  test_citation_phase10.py  test_citation_profile.py  test_citation_verifier.py  test_e2e.py  test_integration_apis.py  test_llm_pipeline.py  test_monitor.py  test_oa_resolver.py  test_primary_text_detection.py  test_problematique.py  test_proxy_session.py  test_readiness_checker.py  test_reference_acquisition.py  test_smart_search.py  test_theory_supplement.py  test_verifier.py  test_writer.py
(+98 files in other folders)
